super.so-theme-docs/style.css
/* ... */
.notion-root>.notion-callout .notion-collection-card__cover img {
    height: 100%!important;
    max-height: 100%!important;
    min-height: 100%!important;
    width: 100%!important;
    max-width: 100%!important;
    min-width: 100%!important;
}

.notion-root>.notion-callout .notion-collection-card {
    background: transparent!important;
    box-shadow: none!important;
    width: 26px!important;
    height: 26px!important;
    transition: all .3s ease!important;
    box-shadow: none!important;
    opacity: .7!important;
}

.notion-root>.notion-callout .notion-collection-card:hover {
    opacity: 1!important;
    transform: translateY(0px)!important;
}

.notion-root>.notion-callout .notion-collection-card__cover img {
    filter: grayscale(100%) contrast(0%)!important;
}

@media all and (max-width: 1100px) {
    .notion-root>.notion-column-list>.notion-column:nth-child(3) {
        display: none !important;
    }
}

@media all and (max-width: 764px) {
    .notion-root>.notion-column-list .notion-column-list:last-child {
        grid-template-columns: 1fr!important;
    }
    .notion-root>.notion-column-list .notion-column-list:last-child .notion-column {
        height: 100px!important;
    }

    .super-navbar__item {
        padding: 12px!important;
    }
    .super-navbar__button.super-navbar__menu-open {
        display: flex!important;
    }
    .notion-image.page-width {
        width: 100%!important;
        max-width: 100%!important;
        margin-left: 0px!important;
        transform: translateX(0%)!important;
    }
    .notion-collection-gallery.large {
        grid-template-columns: 1fr!important;
    }
    .notion-navbar__search {
        right: 15px !important;
    }
    .notion-header {
        left: 0!important;
        top: 100px!important;
    }
    .notion-header__icon-wrapper {
        width: 30px!important;
        height: 30px!important;
    }
    .notion-header__icon {
        width: 30px!important;
        height: 30px!important;
    }
    .notion-root>.notion-column-list>.notion-column:nth-child(1) {
        display: none!important;
    }
    .notion-root>.notion-column-list>.notion-column:nth-child(1).show-nav {
        opacity: 1 !important;
        display: block !important;
    }
    .notion-root>.notion-column-list>.notion-column:nth-child(2) {
        width: 100 !important;
        min-width: 100% !important;
        max-width: 100% !important;
        padding-left: 20px!important;
        padding-right: 20px!important;
        padding-top: 25px!important;
    }
    .notion-column-list {
        flex-direction: column !important;
    }
    .notion-navbar__search {
        margin-right: 40px !important;
        right: 10px !important;
    }
    h1.notion-heading {
        font-size: 2.4rem !important;
        font-weight: 700 !important;
        line-height: 1 !important;
        margin-top: 0.75rem !important;
        margin-bottom: 10px !important;
    }
    h1.notion-heading .notion-semantic-string {
        line-height: 1.1 !important;
    }
    h2.notion-heading {
        font-size: 1.8rem !important;
        line-height: 1.2 !important;
        margin-bottom: 0 !important;
    }
    h3.notion-heading {
        font-size: 1.4rem !important;
        text-transform: none !important;
        letter-spacing: 0 !important;
        margin-bottom: 10px !important;
    }
    .notion-root>.notion-column-list .notion-column-list:last-child .notion-column {
        padding: 10px 20px 0px 20px!important;
        margin-bottom: 10px!important;
    }
    .notion-root>.notion-column-list .notion-column-list:last-child .notion-column a {
        padding: 45px 20px 20px 20px!important;
    }

    .notion-root > .notion-column-list > .notion-column > .notion-image.page-width {
        width: 100%!important;
        max-width: 100%!important;
    }
}



@media all and (max-width: 764px) {
    .notion-root>.notion-callout>.notion-callout__content>.notion-text:nth-child(3) p span {
        display: flex!important;
        flex-direction: column!important;
        margin-bottom: 5px!important;
    }
}


/* SYNTAX */

code[class*="language-"],
pre[class*="language-"] {
    text-align: left;
    white-space: pre;
    word-spacing: normal;
    word-break: normal;
    word-wrap: normal;
    color: var(--color-primary)!important;
    font-size: 1em;
    line-height: 1.5em;
    -moz-tab-size: 4;
    -o-tab-size: 4;
    tab-size: 4;
    -webkit-hyphens: none;
    -moz-hyphens: none;
    -ms-hyphens: none;
    hyphens: none;
}

:not(pre)>code[class*="language-"] {
    white-space: normal;
    border-radius: 0.2em;
    padding: 0.1em;
}

pre[class*="language-"] {
    overflow: auto;
    position: relative;
    margin: 0.5em 0;
    padding: 1.25em 1em;
}

.notion-root .notion-text .notion-text__content .notion-semantic-string span strong .notion-link,
.notion-text .notion-text__content .notion-semantic-string span .notion-link strong {
    padding: var(--cta-padding)!important;
    border-radius: var(--cta-border-radius)!important;
    opacity: 1!important;
    font-weight: 500!important;
    display: inline-flex!important;
    justify-content: center!important;
    transition: var(--transition)!important;
    background: var(--cta-color-bg)!important;
    color: var(--cta-color-text)!important;
    margin: -2px!important;
}

.notion-quote.bg-gray,
.notion-quote.bg-brown,
.notion-quote.bg-orange,
.notion-quote.bg-yellow,
.notion-quote.bg-green,
.notion-quote.bg-blue,
.notion-quote.bg-purple,
.notion-quote.bg-red,
.notion-quote.bg-pink {
    border: none!important;
}

.static-tweet-body {
    font: inherit!important;
}

.static-tweet {
    --link-color: var(--color-primary)!important;
}
/* ... */

